# sigilgraph

./: .gitignore  AGORA_STARGATE_CONTRACT_v0.2.md  ANNOUNCEMENT_v0.8.0.txt  Cargo.toml  DEEPSEEK_R1_VAST_RESULTS.md  FLUX_DB_AUDIT_v0.md  FLUX_LLM_STANDARD.md  MCP_GOV_DENMARK_STATSMINISTERIET.md  METZDOWD_EMAIL_v0.txt  METZDOWD_EMAIL_v1.txt  METZDOWD_EMAIL_v2.txt  METZDOWD_EMAIL_v6_LAUNCH_DRAFT.txt  NODE_TEST_FINDINGS_NEXT.md  PROJECT_STARGATE_v1.md  QWEN_REVIEW_RESULT.md  README.md  REFLECTIONS_FOUR_TERMINALS_v0.md  RELEASES.md  RELEASE_0.36.1_PLAN.md  RELEASE_PLAN_100_WALLET.md  SECURITY_AUDIT_2026-06-10.md  SIGIL_0.90_CHRONOS_FINDINGS.md  SIGIL_200DAY_TESTNET_PLAN.md  SIGIL_AETHER_SYNC_PLAN.md  SIGIL_AGENT_ECONOMY_v0.md  SIGIL_AI_FEE_SYSTEM_v0.md  SIGIL_DNS_ANCHOR_v0.md  SIGIL_FABRIC_FIELD_REPORT_v0.md  SIGIL_FLUX_MINER_LITE.md  SIGIL_FLUX_MINER_v0.md  SIGIL_FORGE_STAR.md.bak-20260531-lyrics-cut  SIGIL_FORGE_STAR_SUNO.txt  SIGIL_FORGE_STAR_SUNO.txt.bak-20260531-cut  SIGIL_GENESIS_v0.md  SIGIL_LIGHTWEIGHT_NODE_PLAN.md  SIGIL_LIGHT_MINER_CREDIT_DESIGN.md  SIGIL_LIGHT_NODE_LIGHT3.md  SIGIL_LIGHT_NODE_LIGHT4.md  SIGIL_LIGHT_NODE_NEXT.md  SIGIL_MASTER_EQUATION_v0.md  (+33 more)
.cargo/: config.toml
book-out/: shadows_in_the_chain_improved.aux  shadows_in_the_chain_improved.out  shadows_in_the_chain_improved.tex  shadows_in_the_chain_improved.toc
crates/flux-ai-author/: Cargo.toml
crates/flux-ai-author/src/: lib.rs  main.rs
crates/flux-ai-cms/: Cargo.toml
crates/flux-ai-cms/src/: main.rs
crates/flux-dev-gate/: Cargo.toml
crates/flux-dev-gate/src/: lib.rs
crates/flux-fold/: Cargo.toml
crates/flux-fold/src/: lib.rs
crates/flux-miner/: Cargo.toml
crates/flux-miner/examples/: blake4_rounds.rs
crates/flux-miner/gpu-cross/: OpenCL.def  build-windows-gpu.sh
crates/flux-miner/src/: client.rs  engine.rs  lib.rs  light.rs  pow.rs  updater.rs
crates/flux-miner/src/gpu/: CUDA.md  blake4.cl  blake4_cuda.cu  mod.rs
crates/flux-miner/tests/: dual_lane_consensus.rs
crates/flux-nation/: Cargo.toml
crates/flux-nation/src/: lib.rs
crates/flux-pool/: Cargo.toml
crates/flux-pool/src/: lib.rs
crates/flux-revisions/: Cargo.toml
crates/flux-revisions/src/: lib.rs
crates/flux-secrets/: Cargo.toml
crates/flux-secrets/src/: lib.rs  main.rs
crates/flux-sentinel/: Cargo.toml
crates/flux-sentinel/src/: lib.rs  main.rs
crates/flux-stamp/: Cargo.toml
crates/flux-stamp/src/: lib.rs
crates/flux-turbo-sync/: Cargo.toml
crates/flux-turbo-sync/src/: kalman_predictor.rs  lib.rs  memory_limiter.rs  orphan_rate_limiter.rs  peer_momentum.rs  pid_controller.rs  precompressed_storage.rs
crates/flux-vdf/: Cargo.toml
crates/flux-vdf/src/: genus2.rs  lib.rs
crates/sigil-ballot/: Cargo.toml
crates/sigil-ballot/src/: lib.rs
crates/sigil-bank/: Cargo.toml
crates/sigil-bank/src/: council.rs  credit.rs  lib.rs  mandate.rs
crates/sigil-book/: Cargo.toml
crates/sigil-book/assets/: chapter10_content_improved.tex  chapter11_content_improved.tex  chapter12_content_improved.tex  chapter13_content_improved.tex  chapter14_content_improved.tex  chapter15_content_improved.tex  chapter16_content_improved.tex  chapter17_content_improved.tex  chapter18_content_improved.tex  chapter19_content_improved.tex  chapter1_content_improved.tex  chapter20_content_improved.tex  chapter21_content_improved.tex  chapter22_content_improved.tex  chapter23_content_improved.tex  chapter24_content_improved.tex  chapter25_content_improved.tex  chapter26_content_improved.tex  chapter2_content_improved.tex  chapter3_content_improved.tex  chapter4_content_improved.tex  chapter5_content_improved.tex  chapter6_content_improved.tex  chapter7_content_improved.tex  chapter8_content_improved.tex  chapter9_content_improved.tex  director-cut-trailer.md
crates/sigil-book/src/: main.rs
crates/sigil-bridge/: Cargo.toml
crates/sigil-bridge/src/: aggregate.rs  asset.rs  ledger.rs  lib.rs  ln.rs  proof.rs  withdraw.rs
crates/sigil-btc-miner/: Cargo.toml
crates/sigil-btc-miner/src/: gpu.rs  lib.rs
crates/sigil-chronos/: Cargo.toml
crates/sigil-chronos/src/: backfill.rs  backfill_catchup.rs  driver.rs  lib.rs  market.rs  multiverse.rs  property.rs  scaling.rs  scenarios.rs  snapshot_cadence.rs  throughput.rs  transport.rs  turbosync.rs  zkflux.rs
crates/sigil-citizenship/: Cargo.toml
crates/sigil-citizenship/src/: lib.rs
crates/sigil-commons/: Cargo.toml
crates/sigil-commons/src/: lib.rs
crates/sigil-council/: Cargo.toml
crates/sigil-council/src/: lib.rs
crates/sigil-dao-bridge/: Cargo.toml
crates/sigil-dao-bridge/src/: lib.rs
crates/sigil-dex/: Cargo.toml
crates/sigil-dex/src/: lib.rs  registry.rs
crates/sigil-dns-anchor/: Cargo.toml
crates/sigil-dns-anchor/src/: lib.rs
crates/sigil-emission/: Cargo.toml
crates/sigil-emission/src/: breathing.rs  lib.rs
crates/sigil-emission/tests/: emission_invariants.rs
crates/sigil-events/: Cargo.toml
crates/sigil-events/src/: lib.rs
crates/sigil-fees/: Cargo.toml
crates/sigil-fees/src/: lib.rs
crates/sigil-handshake/: Cargo.toml
crates/sigil-handshake/src/: handshake.rs  lib.rs  role.rs  session.rs
docs/: AUTH_CLIENT_SIGNING.md  AUTH_GATE_MIGRATION_PLAN.md  BLAKE4.md  CHRONOS_BENCHMARK.md  CHRONOS_SYNC_TUNING.md  FLUX_ENHANCEMENT_PLAN.md  FLUX_LOCAL_WALLET_ARCHITECTURE.md  RELEASE_PLAN_0.36.1.md  SIGIL_CHRONOS_DELTA_RESEARCH_v10.11.37.md  SIGIL_MINER_GPU.md  SIGIL_MURAL.md  SYNC_HARDENING_0.26.md  flux-miner-design.md  flux-sync-engine-whitepaper.tex  honest-release-readme-template.md  operator-runbook.md  release-procedure.md  sigil-fee-system-design.md  sigil-mixer-design.md
gui/: desktop.html  enter-sigil.html  multiverse-state.json  multiverse.html  nations.html  sigil-explorer.html  sigil-home.html  sigil-pq.mjs  sigil-wallet-tron-embedded.html  testnet.html  vision.html  vite-engine-embedded.html
infra/: sigil-bridge.mjs  sigil-pq-bridge.mjs  test-pq.mjs
keys/: rocky-release.pk.hex  rocky-release.sk.hex
papers/: flux-whitepaper-foundations.tex  flux-whitepaper.aux  flux-whitepaper.out  flux-whitepaper.tex
(+434 files in other folders)
