[package]
name = "flux-miner"
# Independent version (like sigil-top) so the miner auto-updates on its own
# cadence — bump this per miner release so the updater can deliver it.
version = "0.1.10"
edition.workspace = true
license.workspace = true
description = "The dual-lane Flux miner: BLAKE4 proof-of-work (the POWER lane, Φ) + a Wesolowski VDF (the TIME lane, Ω). A valid block carries BOTH — power can't fake time, time can't fake power. Chain-agnostic; copies Quillon's standalone miner+node, Flux-native."

[dependencies]
flux-vdf   = { workspace = true }
blake3     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
num-bigint = { workspace = true }
# the succinct lattice backend (v0.3 light-node + block-proof folding) — only the
# light ECONOMIC node needs it, so it rides the `market` feature.
flux-fold  = { workspace = true, optional = true }
# challenge/submit HTTP client — rustls (no openssl) so the miner stays a portable
# single-binary download (musl / windows-gnu). Optional: the verification CORE
# (Challenge/Submission/check_submission/verify_dual) is reqwest-free so a node
# (e.g. sigil-rpcd) can depend on flux-miner with default-features = false.
reqwest    = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }
# the light ECONOMIC node's earning engine: price + arb + sentiment + DCA (propose-only).
flux-market = { path = "../../../flux/crates/flux-market", optional = true }
# reference mining node (flux-mining-node bin) + the roundtrip test's mock node.
tiny_http  = { version = "0.12", optional = true }
# sigil-miner TUI dashboard (obsidian + violet). Pinned to the same 0.28 line
# sigil-top uses so the workspace resolves one ratatui.
ratatui    = { version = "0.28", optional = true }
crossterm  = { version = "0.28", optional = true }
# GPU Lane-A (BLAKE4) search — ported from the QUG q-miner. OpenCL first (most
# portable); CUDA/Vulkan are follow-ons. Needs an OpenCL runtime → off by default.
opencl3    = { version = "0.9", optional = true }

[features]
# Default = the full miner (all bins build with a plain `fluxc build`). A NODE
# that only needs the verification gate depends with default-features = false
# and gets the reqwest-free core (types + check_submission + verify_dual).
default = ["client", "market", "node", "tui"]
client  = ["dep:reqwest"]                         # MinerClient + updater (HTTP)
market  = ["dep:flux-market", "dep:flux-fold"]    # the light economic node
node    = ["dep:tiny_http"]                       # reference mining node + roundtrip test
tui     = ["dep:ratatui", "dep:crossterm"]        # sigil-miner terminal dashboard
gpu     = ["dep:opencl3"]                          # OpenCL BLAKE4 Lane-A (needs a GPU box) — NOT in default
bench   = []                                       # unlocks reduced-round BLAKE4 (pow::blake4_word/_rounds) for the speed-research bench ONLY — never consensus

# The reduced-round hashrate bench is the ONLY non-test consumer of the lever, so it
# requires the `bench` feature: `fluxc run --example blake4_rounds --features bench`.
[[example]]
name = "blake4_rounds"
required-features = ["bench"]

[[bin]]
name = "flux-miner"
path = "src/bin/flux-miner.rs"
required-features = ["client"]

[[bin]]
name = "flux-mining-node"
path = "src/bin/flux-mining-node.rs"
required-features = ["node"]

# the SIGIL standalone miner — dual-lane engine (client) + TUI dashboard (tui).
[[bin]]
name = "sigil-miner"
path = "src/bin/sigil-miner.rs"
required-features = ["client", "tui"]
