[package]
name = "flux-turbo-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Flux Turbo Sync — Git-inspired blockchain sync (port of q-storage::turbo_sync for SIGIL)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
anyhow = { workspace = true }

blake3 = { workspace = true }
sha3 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

rayon = { workspace = true }
dashmap = { workspace = true }
lru = { workspace = true }
num_cpus = { workspace = true }
sysinfo = { workspace = true }

lz4 = { workspace = true }
zstd = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
