[package]
name = "sigil-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SIGIL cross-chain bridge — ONE BETTER than Quillon's. Quillon mints wrapped tokens on a 7-of-11 committee that SIGNS attestations (trust the signers) over a custodial hot wallet, with a single-node-mint fallback. sigil-bridge mints only against a VERIFIABLE source-chain SPV proof (header→merkle-root→tx inclusion→confirmations, checked cryptographically by every node — even a browser light client), and commits the peg invariant (minted ≤ locked, per asset) into a bridge-supply root every block, so over-minting is impossible to hide. Proof, not trust; committed, not opaque. wBTC/wETH/wZEC/wIRON + a generic adapter."

[dependencies]
serde     = { workspace = true }
blake3    = { workspace = true }
sha2      = { workspace = true }
thiserror = { workspace = true }
hex       = { workspace = true }
flux-fold = { path = "../flux-fold" }   # fold a whole epoch's deposits into one constant-size attestation
sigil-oauth = { path = "../sigil-oauth" } # ed25519 verify_sig for signed withdrawal authorization (C9)
lightning-invoice = "0.31"  # BOLT11 parse + secp256k1 signature verify (C-lane: bind LN deposit amount)

[dev-dependencies]
# match lightning-invoice 0.31's transitive versions so the test-built invoice
# types line up with what Bolt11Invoice expects.
secp256k1 = { version = "0.27", features = ["recovery"] }
bitcoin_hashes = "0.12"

[[bin]]
name = "sigil-bridge-demo"
path = "src/bin/sigil-bridge-demo.rs"
